samples/_failures_safe/1761129762_2b4b20_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c454d1c.c: In function ‘main’:
./samples/SAFE/__tmp_5c454d1c.c:140:5: error: expected declaration or statement at end of input
  140 |     print_matrix(&mat1);
      |     ^~~~~~~~~~~~
